# UROP_2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
src/: __init__.py  process_input.py  random_forest_regression.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_imports.py
