[project]
name = "UROP_tom_perry"
version = "0.1.0"
description = "Environment machine learning for UROP project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "folium",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "lightgbm",
    "openpyxl>=3.1.5",
    "pyarrow>=21.0.0",
    "streamlit>=1.50.0",
]
